# LoomOS

./: COMPUTE_ADVISORY.md  DOCS.md  Dockerfile  LICENSE  README.md  RL_GYM_ARCHITECTURE.md  __init__.py  docker-compose.yml  pyproject.toml  quick_demo.py
blocks/: __init__.py  registry.py
blocks/adapters/: diffusion_adapter.py  hf_model_adapter.py  openai_adapter.py  vision_adapter.py
cli/: loomos_cli.py
core/: __init__.py  forge.py  job_manifest_schema.json  loom_agent.py  loom_core.py  loomdb.py  marketplace.py  prism.py  prism_train.py  scheduler.py  spinner.py  tapestry.py  weaver.py
core/utils/: attest.py  security.py  storage.py
examples/: nexus-config.yaml  normal_usage_patterns.py  rl_gym_usage.py  weave_complete_demo.py
infra/k8s/: loomctl-deployment.yaml  loomnode-daemonset.yaml
infra/terraform/: main.tf
nexus/failover/: election.py
nexus/loomctl/: app.py  openapi.yaml  schemas.py
nexus/loomctl/api/: health.py  jobs.py  nodes.py
nexus/loomnode/: attest.py  main.py  worker.py
nexus/loomnode/sandbox/: container_runner.py  wasm_runner.py
nexus/master/: coordinator.py
rl/: __init__.py  gym_integration.py  loom_gym.py  ppo_trainer.py
rl/algos/: __init__.py  apollo_weave_config.py  dpo.py  grpo.py  ppo.py  weave.py  weave_gym_integration.py
rl/envs/: loom_env.py
rl/trainers/: trainer.py
scripts/: quickstart.sh
sdk/js/: package.json  tsconfig.json
sdk/js/src/: index.ts
sdk/python/loomos_sdk/: __init__.py  client.py  job_manifest.py
